--- a/package.json
+++ b/package.json
@@ -1,15 +1,37 @@
 {
   "name": "battleship",
   "version": "1.0.0",
-  "description": "",
+  "description": "battleship",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode=production --node-env=production",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production --node-env=production",
+    "watch": "webpack --watch",
+    "serve": "webpack serve"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack-cli": "^5.0.0"
+    "@types/jest": "^29.2.3",
+    "@webpack-cli/generators": "^0.1.9",
+    "css-loader": "^6.7.1",
+    "eslint-config-prettier": "^8.5.0",
+    "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.3.1",
+    "prettier": "^2.7.1",
+    "style-loader": "^3.3.1",
+    "ts-jest": "^29.0.3",
+    "ts-loader": "^9.3.1",
+    "typescript": "^4.8.3",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1",
+    "workbox-webpack-plugin": "^6.5.4"
+  },
+  "dependencies": {
+    "eslint-config-airbnb-base": "^15.0.0"
   }
 }
